--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     ],
     "require": {
         "ext-curl": "*",
-        "ext-json": "*"
+        "ext-json": "*",
+        "neuron-php/patterns": "^0.5.1",
+        "neuron-php/validation": "^0.5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "7.*"
