--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "ext-curl": "*",
         "ext-json": "*",
         "neuron-php/patterns": "^0.5.1",
-        "neuron-php/validation": "^0.5.0"
+        "neuron-php/validation": "^0.5.0",
+        "ext-sockets": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "7.*"
