--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "ext-json": "*",
         "neuron-php/patterns": "^0.5.1",
         "neuron-php/validation": "^0.5.0",
-        "ext-sockets": "*"
+        "ext-sockets": "*",
+        "neuron-php/util": "^0.5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "7.*"
