--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
     "require": {
         "ext-curl": "*",
         "ext-json": "*",
-        "neuron-php/patterns": "^0.5.1",
-        "neuron-php/validation": "^0.5.0",
+        "neuron-php/patterns": "0.5.*",
+        "neuron-php/validation": "0.5.*",
         "ext-sockets": "*",
-        "neuron-php/util": "^0.5.1"
+        "neuron-php/util": "0.5.*"
     },
     "require-dev": {
         "phpunit/phpunit": "9.*"
