Refactored tests. Renamed mux to channels in log base for singleton. Added filters.

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Neuron\\": "src/"
+            "Neuron\\": "src/",
+            "Tests\\": "tests/"
         }
     }
 }
