--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "neuron-php/util": "0.6.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "9.*"
+        "phpunit/phpunit": "9.*",
+        "phpmd/phpmd": "^2.15"
     },
     "autoload": {
         "psr-4": {
