--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "9.*",
-        "phpmd/phpmd": "^2.15"
+        "phpmd/phpmd": "^2.15",
+        "php-mock/php-mock-phpunit": "^2.10"
     },
     "autoload": {
         "psr-4": {
