--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "php": "^8.4",
         "ext-curl": "*",
         "ext-json": "*",
         "ext-sockets": "*",
