--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,10 @@
         "phpmd/phpmd": "^2.15",
         "php-mock/php-mock-phpunit": "^2.10"
     },
+    "suggest": {
+        "psr/log": "^3.0 - Required for PSR-3 adapter functionality",
+        "aws/aws-sdk-php": "^3.0 - Required for Amazon SQS destination"
+    },
     "autoload": {
         "psr-4": {
             "Neuron\\": "src/",
