--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "ext-curl": "*",
         "ext-json": "*",
         "ext-sockets": "*",
-        "neuron-php/patterns": "0.7.*",
+        "neuron-php/patterns": "^0.7.2",
         "neuron-php/validation": "0.7.*",
         "neuron-php/util": "0.6.*"
     },
